# ecs_without_bevy

./: Cargo.toml
src/: main.rs
src/game_of_life/: mod.rs
