[package]
name = "engine_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { version = "0.12.1", features = ["multi-threaded"] }
clap = { version = "4.4.18", features = ["derive"] }
integer-sqrt = "0.1.5"
kdtree = "0.7.0"
rand = "0.8.5"
rayon = "1.8.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
